# fortochka

./: .dockerignore  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/fortochka/app/: ConfigStore.kt  MainActivity.kt
android/app/src/main/kotlin/com/fortochka/app/camera/: BootReceiver.kt  CameraService.kt  CameraStatus.kt
android/app/src/main/kotlin/com/fortochka/app/viewer/: ViewerStatus.kt  WallpaperWorker.kt
android/gradle/: libs.versions.toml
crates/core/: Cargo.toml
crates/core/src/: client.rs  config.rs  error.rs  lib.rs  retry.rs
crates/core/tests/: client.rs
crates/mobile/: Cargo.toml
crates/mobile/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  handlers.rs  images.rs  lib.rs  main.rs  schema.sql  state.rs  storage.rs
crates/server/tests/: api.rs
crates/uniffi-bindgen/: Cargo.toml
crates/uniffi-bindgen/src/: main.rs
deploy/: Caddyfile  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOY.md
scripts/: gen-bindings.sh  smoke.sh
