[workspace]
resolver = "3"
members = ["crates/proto"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# внутренние крейты
fortochka-proto = { path = "crates/proto" }

# общие
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
url = "2"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
strip = "debuginfo"
