[workspace]
resolver = "3"
members = ["crates/proto", "crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# внутренние крейты
fortochka-proto = { path = "crates/proto" }
fortochka-core = { path = "crates/core" }

# общие
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
url = "2"
tracing = "0.1"

# клиент (core)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# тесты
tempfile = "3"
httpmock = "0.7"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
strip = "debuginfo"
