[workspace]
resolver = "3"
members = [
    "crates/proto",
    "crates/core",
    "crates/server",
    "crates/mobile",
    "crates/uniffi-bindgen",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# внутренние крейты
fortochka-proto = { path = "crates/proto" }
fortochka-core = { path = "crates/core" }

# общие
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
url = "2"
tracing = "0.1"

# клиент (core)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# мобильная FFI-граница
uniffi = "0.32"

# сервер
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9"

# тесты
tempfile = "3"
httpmock = "0.7"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic полезен для обучения, но эти три правила — шум для нашего стиля
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
strip = "debuginfo"
