[package]
name = "fortochka-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
fortochka-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
