[package]
name = "fortochka-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
fortochka-proto = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
fortochka-core = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
